--- a/bird.html
+++ b/bird.html
@@ -21,30 +21,30 @@
 
     <main class="contents">
         <div class="contentbox">
-            <h2>강아지</h2>
+            <h2>새</h2>
             <ul class="pet-list">
                 <li class="item">
-                    <img src="./images/dog01.jpg" alt="dog01">
+                    <img src="./images/bird01.jpg" alt="bid01">
                     <p class="name">초롱이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog02.jpg" alt="dog02">
+                    <img src="./images/bird02.jpg" alt="bird02">
                     <p class="name">땡칠이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog03.jpg" alt="dog02">
+                    <img src="./images/bird03.jpg" alt="bird03">
                     <p class="name">칠칠이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog04.jpg" alt="dog02">
+                    <img src="./images/bird04.jpg" alt="bird04">
                     <p class="name">순동이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog05.jpg" alt="dog02">
+                    <img src="./images/bird05.jpg" alt="bird05">
                     <p class="name">뭉뚱이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog06.jpg" alt="dog02">
+                    <img src="./images/bird06.jpg" alt="bird06">
                     <p class="name">코코</p>
                 </li>
             </ul>
