--- a/cat.html
+++ b/cat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>동물정보</title>
+    <title>고양이-동물정보</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&family=Open+Sans:wght@500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -21,30 +21,30 @@
 
     <main class="contents">
         <div class="contentbox">
-            <h2>강아지</h2>
+            <h2>고양이</h2>
             <ul class="pet-list">
                 <li class="item">
-                    <img src="./images/dog01.jpg" alt="dog01">
+                    <img src="./images/cat01.jpg" alt="cat01">
                     <p class="name">초롱이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog02.jpg" alt="dog02">
+                    <img src="./images/cat02.jpg" alt="cat02">
                     <p class="name">땡칠이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog03.jpg" alt="dog02">
+                    <img src="./images/cat03.jpg" alt="cat03">
                     <p class="name">칠칠이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog04.jpg" alt="dog02">
+                    <img src="./images/cat04.jpg" alt="cat04">
                     <p class="name">순동이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog05.jpg" alt="dog02">
+                    <img src="./images/cat05.jpg" alt="cat05">
                     <p class="name">뭉뚱이</p>
                 </li>
                 <li class="item">
-                    <img src="./images/dog06.jpg" alt="dog02">
+                    <img src="./images/cat06.jpg" alt="cat06">
                     <p class="name">코코</p>
                 </li>
             </ul>
