--- a/bird.html
+++ b/bird.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="./index.html">강아지</a>
         <a href="./cat.html">고양이</a>
-        <a href="./bird.html">새</a>
+        <a class="active" href="./bird.html">새</a>
         </ul>
     </nav>
     </header>
