--- a/cat.html
+++ b/cat.html
@@ -13,7 +13,7 @@
         <h1>동물정보</h1>
     <nav>
         <a href="./index.html">강아지</a>
-        <a href="./cat.html">고양이</a>
+        <a class="active" href="./cat.html">고양이</a>
         <a href="./bird.html">새</a>
         </ul>
     </nav>
